--- a/uganda.html
+++ b/uganda.html
@@ -120,9 +120,11 @@
             <div class="row align-items-center">
                 <div class="col-lg-6 col-md-6">
                     <h4 class="mt-lg-0 mt-3">ABOUT US</h4>
-                    <p class="mt-lg-3 "> Lungujja, Busabala, and all of Uganda areas are served by Veepo Plumbing Solutionss with over 10 years' experience.
+                    <p class="mt-lg-3 "> Our team of Emergency plumbers in Kampala, Mukono, Wakiso and nearby places have all the skills and knowledge to deal with any plumbing emergency rapidly and professionally. If you require 
+			    a reliable emergency plumbing service near you, look no further.
+			    We do new plumbing work, sewerage management, maintenance, repairs, blockages, leakages, and pipe work, draining inspection using camera.
                         </p>
-                        <p>Our plumbers and electricians are most frequently called in Central Uganda.</p>
+                        <p>Our plumbers are most frequently called in Central Uganda.</p>
                         <div class="call-buttons mt-lg-4 mt-3">
                             <a href="tel:0755198429" class="btn-lg contact-btn"><i class="fa-solid fa-phone-volume"></i>&nbsp;<b>0755198429</b></a>
                     </div>
